@@ -1,4 +1,4 @@
-#	$NetBSD: SWINGER,v 1.57 2004/11/24 20:49:24 bouyer Exp $
+#	$NetBSD: SWINGER,v 1.58 2004/12/01 22:27:46 grant Exp $
 #	from NetBSD: GENERIC,v 1.325 2000/04/14 14:53:32 augustss Exp
 #
 #	SWINGER -- thorpej's Abit BP6+dual Celeron
@@ -8,7 +8,7 @@ include "arch/i386/conf/std.i386"
 
 #options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident 		"SWINGER-$Revision: 1.57 $"
+#ident 		"SWINGER-$Revision: 1.58 $"
 
 maxusers	64		# estimated number of users
 
@@ -418,6 +418,7 @@ aceride* 	at pci? dev ? function ?	# Acer Lab IDE controllers
 cmdide* 	at pci? dev ? function ?	# CMD tech IDE controllers
 cypide* 	at pci? dev ? function ?	# Cypress IDE controllers
 hptide* 	at pci? dev ? function ?	# Triones/HighPoint IDE controllers
+iteide* 	at pci? dev ? function ?	# IT Express IDE controllers
 optiide* 	at pci? dev ? function ?	# Opti IDE controllers
 piixide* 	at pci? dev ? function ?	# Intel IDE controllers
 pdcide* 	at pci? dev ? function ?	# Promise IDE controllers
